<resources>
    <string name="app_name">HomelyChef</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_name">Name (Min. 3 characters)</string>
    <string name="address">Delivery Address</string>
    <string name="choose_password">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Register</string>
    <string name="home">Home</string>
    <string name="offers">New Offers</string>
    <string name="my_profile">My Profile</string>
    <string name="about_us">About Me</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Log out</string>
    <string name="cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history">Order History</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="filter">Filter</string>
    <string name="restaurant_name">Restaurant</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="profile_details">Your Profile Details are listed below:</string>
    <string name="go_to_cart">Proceed to Cart</string>
    <string name="confirm_order">Place Order</string>
    <string name="action_search">Search</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="favorites">Favorite Restaurants</string>
    <string name="channel_name">Android Training</string>
    <string name="channel_description">This notification confirms that the order is placed</string>
    <string name="dummy_phone">+91-1234567890</string>
    <string name="empty_cart">Your cart is currently empty</string>
    <string name="no_favorites">You do not have any favorite restaurants</string>
    <string name="no_orders">You haven\'t placed any orders yet</string>
    <string name="faq_answer_one">Most of the women or mainly middle-class women
        have a great asset that is to make delicious healthy food.It is popularly said,
        Mothers have a taste in their hands.Home cooked food with a motherly feeling
        always tastes better than outside food. Moms cook food every day for their family
        and are the master chefs of delicious food. So the homemade food delivery app gives
        the joy of eating home cooked food to people,students, working professionals who are
        living outside of their home and constantly miss home cooked food.And this will also
        help women at home to earn and feel proud of themselves. One doesn\'t need to get into
        corporate to business,a mom\’s kitchen can become her office as well.</string>
    <string name="faq_answer_two">Our Home Chefs come from all Parts of
        the country to create a Food Culture of Diversity and uniting everyone with Food. They have been delighting their
        family,friends and loved ones over decades. Most of these Chefs have carried
        forward hidden recipes passed to them by their Mother and Grandmother that have
        been applauded by everyone over the ages.</string>
    <string name="faq_answer_four">1.Affordable and Value for Money Breakfast, Lunch, Snacks, Dinner, Cakes, Sweets
        2.100% Safe Food: Healthy, Tasty, Fresh and Hygienic food For COVID Patients.
        3. Cash on Delivery available for all food order
        4. Customize Online Food delivery and cake order delivery as per your taste and preferences.
        5. Directly speak to Home Chefs for taste preferences.100% Refund,0% cancellation charges.
        6. Advance Orders, Future Orders, Party Orders, Tiffin services and Food Catering.</string>
    <string name="faq_answer_three">The booming food-on-demand industry is opening up countless opportunities
        for entrepreneurs to create their own small businesses. One unique business model is selling homemade food
        ,and it has never been easier to enter the home based food delivery market with the help of food delivery apps.
        There is now a growing trend of independent food startups and home-based food businesses utilising food delivery
        apps to sell their homemade goods.</string>
    <string name="faq_answer_five">Every Doctor and all Medical Research only recommend home cooked food
        1.Ghar Ka Khana gives you joy of eating.
        2. Homely meals are essential for a Balanced Diet and Healthy Body..
        3. Home food builds immunity, prevents diseases and obesity.</string>
    <string name="faq_answer_six">HomelyChef is a mobile application made by Abdullah Barudgar under the supervision of Dr.Farheen Siddiqui,Jamia Hamdard University.HomelyChef is reviving the Culture of Home Food by giving everyone
        a variety of cuisines across home food and Bakery choices. Their Chefs have learned
        the art of cooking through their unwavering passion and coached by their Mom, Dad, and Granny, who could
        sprinkle their magic in the food they cook.</string>
    <string name="register_yourself">
        <u>Don\'t have an account? Sign up now</u>
    </string>
    <string name="forgot_password">
        <u>Forgot Password?</u>
    </string>
    <string name="email">Email Address</string>
    <string name="enter_mobile_forgot_password">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="enter_otp">Enter the received OTP below</string>
    <string name="otp">OTP (4 characters)</string>
    <string name="new_password">New Password (Min. 4 characters)</string>
    <string name="submit">Submit</string>
    <string name="order_placed">Your order has been successfully placed!</string>
    <string name="order_history_static_text">Your previous orders are listed below :</string>
    <string name="dummy_date">20/12/2018</string>
    <string name="about_chefs">About Chefs</string>
    <string name="q_1_how_homelychef_help_women_in_society">Q.1 How HomelyChef help women in society ?</string>
    <string name="q_2_who_are_your_home_chefs">Q.2 Who are your home chefs ?</string>
    <string name="q_3_how_food_delivery_app_help_new_entrepreneurs">Q.3 How food delivery app help new entrepreneurs ?</string>
    <string name="q_4_why_choose_us_for_online_food_delivery">Q.4 Why choose us for online food delivery ?</string>
    <string name="q_5_what_is_the_benefit_of_home_made_food">Q.5 What is the benefit of home made food ?</string>
    <string name="q_6_about_app">Q.6 About App ?</string>
    <string name="huzaif_akhtar">Meet our Delhi based Home Chef Mr. Huzaif Akhtar.He became a home chef and more than thirty years of cooking experience.
                                 He started \"Pind Tadka\" from his residence. It\’s been one year since he also started his YouTube channel \“Cook with huzaif\”.
                                 He is an Indian Home Chef,His specialties are mainly traditional Indian cuisine.
                                 He  used to cook at home where his friends and family members used to appreciate him food and that motivated him always.
                                 This motivated him to try something new, some fusion food, traditional food etc. With every success, he started trying new cuisine
                                 and new recipe which would bring more accolades to him.</string>
    <string name="firoz_ansari">Meet our Jharkhand based Home Chef Mr. Firoz Ansari.He became a home chef and more than 5 years of cooking experience.
                                 He started \"Garbar Burgers\" from his residence. It\’s been one year since he also started his blog \“Cook with firoz\”.
                                 He is an Indian Home Chef,His specialties are mainly traditional Indian Burgers.
                                 He  used to cook at home where his friends and family members used to appreciate him food and that motivated him always.
                                 This motivated him to try something new, some fusion food, traditional food etc. With every success, he started trying new cuisine
                                 and new recipe which would bring more accolades to him.</string>
    <string name="aryan_parashar">Meet our Bihar based Home Chef Mr. Firoz Ansari.He became a home chef and more than 10 years of cooking experience.
                                 He started \"Baco Tell\" from his residence. It\’s been one year since he also started his youtube channel \“Cook with aryan\”.
                                 He is an Indian Home Chef,His specialties are mainly different types of Baco\'s.
                                 He  used to cook at home where his friends and family members used to appreciate him food and that motivated him always.
                                 This motivated him to try something new, some fusion food, traditional food etc. With every success, he started trying new cuisine
                                 and new recipe which would bring more accolades to him.</string>
    <string name="sahil_kumar">Meet our Jammu and Kashmir based Home Chef Mr. Sahil Khan.He became a home chef and more than 40 years of cooking experience.
                                 He started \"Heera Mahal\" from his residence. It\’s been one year since he also started his youtube channel \“Cook with sahil\”.
                                 He is an Indian Home Chef,His specialties are mainly different types of Indian foods.
                                 He  used to cook at home where his friends and family members used to appreciate him food and that motivated him always.
                                 This motivated him to try something new, some fusion food, traditional food etc. With every success, he started trying new cuisine
                                 and new recipe which would bring more accolades to him.</string>
    <string name="gayatri">Meet our Delhi based Home Chef Ms. Gayatri.She became a home chef and more than 10 years of cooking experience.
                                 She started \"Smokins Chik\" from his residence. It\’s been one year since she also started his youtube channel \“Cook with gayatri\”.
                                 She is an Indian Home Chef,Her specialties are mainly chicken cuisine
                                 She  used to cook at home where her friends and family members used to appreciate her food and that motivated her always.
                                 This motivated her to try something new, some fusion food, traditional food etc. With every success, she started trying new cuisine
                                 and new recipe which would bring more accolades to her.</string>
    <string name="arushi_gupta">Meet our Uttar Pradesh based Home Chef Ms. Arushi Gupta.She became a home chef and more than 20 years of cooking experience.
                                 She started \"Swirley Shack\" from his residence. It\’s been one year since she also started his youtube channel \“Cook with arushi\”.
                                 She is an Indian Home Chef,Her specialties are mainly vegetables cuisine
                                 She  used to cook at home where her friends and family members used to appreciate her food and that motivated her always.
                                 This motivated her to try something new, some fusion food, traditional food etc. With every success, she started trying new cuisine
                                 and new recipe which would bring more accolades to her</string>
</resources>