<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FAQFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_1_how_homelychef_help_women_in_society"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins"
                android:padding="10dp"
                android:text="@string/faq_answer_one"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_2_who_are_your_home_chefs"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins"
                android:padding="10dp"
                android:text="@string/faq_answer_two"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_3_how_food_delivery_app_help_new_entrepreneurs"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_three"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:layout_marginLeft="15dp"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_4_why_choose_us_for_online_food_delivery"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_four"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_5_what_is_the_benefit_of_home_made_food"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_five"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_6_about_app"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_six"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:layout_marginLeft="15dp"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>

    </ScrollView>
</FrameLayout>