<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/homely_chef_logo_img" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_action_phone"
        android:drawablePadding="3dp"
        android:textSize="13sp"
        android:fontFamily="@font/poppins"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:textSize="13sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_action_password"
        android:drawablePadding="3dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:maxLines="1"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textSize="16sp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        android:padding="8dp"
        android:text="@string/forgot_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtRegisterYourself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:padding="8dp"
            android:text="@string/register_yourself"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</LinearLayout>