<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlForgotPass"
    tools:context=".activity.ForgotPasswordActivity">


    <RelativeLayout
        android:id="@+id/rlContentMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="220dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/homely_chef_logo_img" />

        <TextView
            android:id="@+id/txtEnterMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAppLogo"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/enter_mobile_forgot_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/etForgotMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEnterMobile"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:fontFamily="@font/poppins"
            android:textSize="13sp"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etForgotMobile"
            android:layout_margin="10dp"
            android:textSize="13sp"
            android:background="#ffffff"
            android:fontFamily="@font/poppins"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnForgotNext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/etForgotEmail"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/poppins_medium"
            android:padding="10dp"
            android:textSize="15sp"
            android:text="@string/next"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textStyle="bold" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>